# Ritsu_ai

./: .gitignore  README.md  RITSU_QUICKSTART.md  WARP.md  core_memory.json  layout  layout.rb  main.py  meta_data_router.json  not-main.py  sample_Ritsu.txt  simple_test.py  test.py  test_basic.py
ai/: ai_assistant.py  knowledge_base.py  memory_manager.py  nlp_engine.py
config/: config.json  config.py  setup.py
core/: Ritsu_self.py  __init__.py  code_analyzer.py  code_generator.py  codedb.py  command_classifier.py  event_manager.py  executor.py  module_planning.py  planner_manager.py  planning.py  reloader.py  self_improvement.py  shell_executor.py  tools.py  troubleshooter.py
core/Tool_Library/: process_monitor.py
core/Tool_Library/math/: Draw_math.py  calculator.py  math_shape_draw.py
core/Tools/: file_reader.py  process_monitor.py
core/Tools/math/: calculator.py  math_shape_draw.py
data/: knowledge_base.json  memory.json  projects.json  sample_Ritsu.txt  short_term_mem.json  tasks.json  troubleshooting_kb.json
input/: chat_listener.py  command_parser.py  input_manager.py  stt.py  tts.py
llm/: prompt_templates.py  ritsu_llm.py
output/: avatar.py  output_manager.py  stream_adapter.py  tts.py
rust_editor/: Cargo.toml
rust_editor/src/: analysis_result.rs  analyzer.rs  error.rs  formatter.rs  gpu_executor.rs  lib.rs  lsp_bridge.rs
rust_editor/src/gpu/: backend.rs  cuda.rs  executor.rs  mod.rs
system/: config_manager.py  logger.py
